# HomeWork_yamr

./: .travis.yml  CMakeLists.txt  MapHandle.cpp  MapHandle.h  MapReduce.cpp  MapReduce.h  Mapping.cpp  Mapping.h  MiniHadoop.cpp  MiniHadoop.h  Reduce.cpp  Reduce.h  ReduceHandle.cpp  ReduceHandle.h  emails.txt  main.cpp  threadsafe_multiset.h
test/: CMakeLists.txt  test_reduce_handle.cpp
